<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.desz.conversion</groupId>
	<artifactId>longtoword</artifactId>
	<version>RELEASE-5.0.3</version>
	<packaging>jar</packaging>

	<name>LongToword</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mockito.version>2.28.2</mockito.version>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>


	<dependencies>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.9</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<!-- <scope>provided</scope> -->
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
			<version>2.0.13</version>
		</dependency>
		<!-- <dependency> <groupId>org.slf4j</groupId>
		<artifactId>slf4j-log4j12</artifactId> 
			<scope>provided</scope> <version>1.7.7</version> </dependency> -->


		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8</version>
			</plugin>
		</plugins>

	</reporting>
	<build>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>

			<!-- https://mvnrepository.com/artifact/org.junit/surefire-junit5 -->
			<!--<dependency>
				<groupId>org.junit</groupId>
				<artifactId>surefire-junit5</artifactId>
				<version>5.0.0-ALPHA</version>

			</dependency>-->


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<instrumentation>
						<ignoreMethodAnnotations>
							<ignoreMethodAnnotation>
								org.instrumentation.AvoidCoverage</ignoreMethodAnnotation>
						</ignoreMethodAnnotations>
					</instrumentation>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.4</version>

				<configuration>
					<findbugsXmlOutputDirectory>
						${project.build.directory}/findbugs
					</findbugsXmlOutputDirectory>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<!-- FIXME Ensures that FindBugs inspects source code when
					project is 
						compiled. -->
					<!-- <execution> <id>analyze-compile</id>
					<phase>compile</phase> <goals> 
						<goal>check</goal> </goals> </execution> -->
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>xml-maven-plugin</artifactId>
				<version>1.0</version>
				<configuration>
					<transformationSets>
						<transformationSet>
							<!-- Configures the source directory of XML files. -->
							<dir>${project.build.directory}/findbugs</dir>
							<!-- Configures the directory in which the FindBugs
							report is written. -->
							<outputDir>${project.build.directory}/findbugs</outputDir>
							<!-- Selects the used stylesheet. -->
							<!-- <stylesheet>fancy-hist.xsl</stylesheet> -->
							<stylesheet>default.xsl</stylesheet>
							<!--<stylesheet>plain.xsl</stylesheet> -->
							<!--<stylesheet>fancy.xsl</stylesheet> -->
							<!--<stylesheet>summary.xsl</stylesheet> -->
							<fileMappers>
								<!-- Configures the file extension of the output
								files. -->
								<fileMapper
									implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
									<targetExtension>.html</targetExtension>
								</fileMapper>
							</fileMappers>
						</transformationSet>
					</transformationSets>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>transform</goal>
						</goals>
					</execution>

				</executions>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>findbugs-maven-plugin</artifactId>
						<version>3.0.2</version>
					</dependency>
				</dependencies>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											xml-maven-plugin
										</artifactId>
										<versionRange>
											[1.0,)
										</versionRange>
										<goals>
											<goal>transform</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
